extra/mariabackup/xtrabackup.cc
@@ -5503,6 +5503,14 @@ xtrabackup_prepare_func(char** argv)
 
 	fil_path_to_mysql_datadir = ".";
 
+	/* Fix DDL for prepare. Process .del,.ren, and .new files.
+	The order in which files are processed, is important
+	(see MDEV-18185, MDEV-18201)
+	*/
+	xb_process_datadir(xtrabackup_incremental_dir ? xtrabackup_incremental_dir : ".",
+		".del", prepare_handle_del_files);
+	xb_process_datadir(xtrabackup_incremental_dir? xtrabackup_incremental_dir:".",
+		".ren", prepare_handle_ren_files);
 	if (xtrabackup_incremental_dir) {
 		xb_process_datadir(xtrabackup_incremental_dir, ".new.meta", prepare_handle_new_files);
 		xb_process_datadir(xtrabackup_incremental_dir, ".new.delta", prepare_handle_new_files);
@@ -5510,11 +5518,6 @@ xtrabackup_prepare_func(char** argv)
 	else {
 		xb_process_datadir(".", ".new", prepare_handle_new_files);
 	}
-	xb_process_datadir(xtrabackup_incremental_dir ? xtrabackup_incremental_dir : ".",
-		".del", prepare_handle_del_files);
-	xb_process_datadir(xtrabackup_incremental_dir? xtrabackup_incremental_dir:".",
-		".ren", prepare_handle_ren_files);
-
 
 	int argc; for (argc = 0; argv[argc]; argc++) {}
 	encryption_plugin_prepare_init(argc, argv);
